--- a/FAQ.html
+++ b/FAQ.html
@@ -1,28 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Сайт города Шахтерска</title>
-    <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
 <header>
-    <h1 class="link"><a href="index.html">Shatersk.<span style="color: black;">D</span>
-        <span style="color: blue;">N</span>
-        <span style="color: red;">R</span>
-    </a></h1>
-    <img src="../img/gerb160rus.jpg" height="152" width="160" alt = ''  />
+    <h1><a href="index.html"><span style="color: red;">Torez.com</span></a></h1>
+    <img src="photo/9.jpg" alt="Not found" height="150" width="150"/>
 </header>
 <nav>
-    <ul class="menu-main">
+    <ul class="menu">
         <li><a href="index.html">Главная</a></li>
         <li><a href="history.html">История </a></li>
         <li><a href="infrastruct.html">Инфраструктура </a></li>
-        <li><a href="culture.html">Исскуство и культура </a></li>
+        <li><a href="culture.html">Искуcство и культура</a></li>
         <li><a href="FAQ.html">Обратная связь</a></li>
     </ul>
 </nav>
-<main>
+
+<body>
 <section class="backfire-form-section">
     <fieldset>
         <legend><h2>Обратная связь</h2></legend>
@@ -45,19 +45,17 @@
             <br>
             <input type="submit" value="Отправить">
             <input type="button" disabled disabledname="error" value="Сообщить об ошибке">
-            <h3><a href="park.html">Отправиться в Южный Парк</a> </h3>
         </form>
     </fieldset>
 </section>
-</main>
-
-</body>
-<footer>
-    <p>
-        <small>Все права защищены Мной</small>
-    <address >
-        Не_скажу1@gmail.com
-    </address>
-    </p>
+<div class="footer"><footer>
+    <center> <p>
+        <small>Все права защищены ну это не точно</small>
+        <address >
+            Почты нет и не будет <s>@gmail.com</s>
+        </address>
+        </p></center>
 </footer>
+</div>
+</body>
 </html>
