--- a/history.html
+++ b/history.html
@@ -1,75 +1,58 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Сайт города Шахтерска </title>
-    <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
 <header>
-    <h1 class="link"><a href="index.html">Shatersk.<span style="color: black;">D</span>
-        <span style="color: blue;">N</span>
-        <span style="color: red;">R</span>
-    </a></h1>
-    <img src="img/gerb160rus.jpg" height="152" width="160" alt = ''  />
+    <h1><a href="index.html"><span style="color: red;">Torez.com</span></a></h1>
+    <img src="photo/9.jpg" alt="Not found" height="150" width="150"/>
 </header>
 <nav>
-    <ul class="menu-main">
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="history.html">История </a></li>
-        <li><a href="infrastruct.html">Инфраструктура </a></li>
-        <li><a href="culture.html">Исскуство и культура </a></li>
-        <li><a href="FAQ.html">Обратная связь</a></li>
-    </ul>
+    <ul class="menu">
+    <li><a href="index.html">Главная</a></li>
+    <li><a href="history.html">История </a></li>
+    <li><a href="infrastruct.html">Инфраструктура </a></li>
+    <li><a href="culture.html">Искуcство и культура</a></li>
+    <li><a href="FAQ.html">Обратная связь</a></li>
+</ul>
 </nav>
-<main>
-    <h1> История города Шахтерска</h1>
-    <p class="history">
-        Шахтерск расположен на расстоянии 60 км от г. Донецка, в восточной части Донецкой Народной Республики,
-        на южных склонах Донецкого кряжа с ярко выраженными холмистыми равнинами. Город находится на высоте 200 м над
-        уровнем моря (это одна из наивысших точек Республики). Граничит Шахтерск c Торезом, Зугресом, Кировским.
-    </p>
-    <img class="foto-history" src="http://photocdn.photogoroda.com/source2/cn9908/r10002/c10059/91712732.jpg?v=20171213112136" alt="Not found">
-    <h3 class="title-table"> Основные события из жизни города</h3>
+<body>
+    <center><h4 class="title-table"> Основные события из жизни города</h4></center>
     <div class="mobileTable">
-        <table class="cwdtable" cellspacing="0" cellpadding="1" border="1">
+        <table class="tablehistory" cellspacing="1" cellpadding="2" border="5">
             <tr><th>Года</th><th>Описание</th></tr>
-            <tr><td>1764 г.</td><td>Основан в 1764 году как слобода полковника, графа Алексея Орлова Алексеево-Орловка в
-                                    Области Войска Донского, насчитывающая в 1801 году 950 жителей, позже слился с посёлком
-                                    Ольховское (основан в 1784 году, войсковым старшиной Васильевым, насчитывал в
-                                    1801 году 239 человека). Во второй половине 19-го века идёт активная разработка
-                                    залежей каменного угля,
-                                     в 1865 году имелось 2 шахты. Население слободы неуклонно возрастало, и к 1891 году
-                                        здесь проживало 6 795
-                                    жителей и 671 иногородних. С 1900 года вблизи слободы функционирует шахта купца
-                                    Абрама Катыка, вокруг которой к 1905 году сформировался посёлок Катык.</td></tr>
-            <tr><td>27 октября 1938 г.</td><td>Получен статус:<abbr title="Посёлка Городского типа">ПГТ</abbr></td></tr>
-            <tr><td>20 августа 1953 г.</td><td>посёлки Катыковского района Сталинской области: пгт Катык
-                                    (бывший посёлок шахты № 18), посёлки Постниково, Северное, Шевченково, посёлки шахт № 12
-                                    (бывшая шахта «Ильик»), 13, 14, 15, 16 (бывшая шахта «Зимарёв»), 30, 31 объединены в город
-                                    районного подчинения Шахтёрск, а Катыковский район переименован в Шахтёрский.</td></tr>
-            <tr><td>С 1956 года до конца 1980-х</td><td>в городе Шахтёрске было сдано в эксплуатацию
-                                    11 новых шахт, за 9-ю пятилетку добыто 31,3 млн тонн угля, а сам город стал одним из
-                                    самых богатых в Советском Союзе.</td></tr>
-            <tr><td>30 декабря 1962 г</td><td>в состав города Шахтёрск включены посёлки городского типа: пгт
-                                    Алексеево-Орловка (населением в 1959 году 18 693 чел.) и пгт Ольховчик (населением в 1959 году 9 454 чел.),
-                                    город получил статус областного подчинения</td></tr>
-            <tr><td>15 апреля 2014 года</td><td>в ходе протестов на Юго-Востоке Украины, оказался под контролем Донецкой
-                                    Народной Республики</td></tr>
-            <tr><td>27 июля 2014</td><td>Велись активные боевые действия на територии Шахтерска</td></tr>
-            <tr><td>Февраль 2015</td><td>Линия фронта отодвинулась от города. Начался активный процесс восстановления
-                            разрушенных объектов</td></tr>
+            <tr><td>1860 г.</td><td>ОС 1860-х годов — центр добычи каменного угля. С 1868 года поселение носило название Чистяко́во по фамилии владельца поместья — таганрогского купца Чистякова. В это время в поселке насчитывалось 148 дворов с населением 1013 человек. В 1875 году образовано Чистяковское горнопромышленное общество, на севере нынешнего Чистяково тогда работали шахты «Наклонная» и «Галерея», а также Алексеевское горнопромышленное общество </td></tr>
+            <tr><td>1933 году г.</td><td> <abbr title="В 1932 году посёлок получил статус города"> В  образован трест «Чистяковуголь», объединявший 10 угольных шахт</abbr></td></tr>
+            <tr><td>4 января 1933 года г.</td><td>Городскую черту города Чистяково вошли посёлки рудников «Южная Группа» и «Красная Звезда», а сам город отнесён к разряду городов областного подчинения с включением в городской совет упраздняемого Чистяковского района.</td></tr>
+            <tr><td>27 октября 1938 года</td><td>К разряду посёлков городского типа (пгт) отнесены населённые пункты на территории современного Чистяково: пгт Западно-Группский</td></tr>
+            <tr><td>В 1940 г</td><td>В 1940 годах образовано 3 районных совета города Чистяково (в настоящее время ликвидированы):<ul>
+                <li>Красная Звезда</li>
+                <li>Южная группа</li>
+                <li>Станция Чистяково</li>
+            </ul></td></tr>
+            <tr><td>31 октября 1941 года</td><td>советские органы и войска оставили город, оккупирован германскими войсками</td></tr>
+            <tr><td>2 сентября 1943 года</td><td>Вород Чистяково освобождён войсками Южного фронта в ходе Донбасской операции</td></tr>
+            <tr><td>19 сентября 1958 года</td><td>В городскую черту города Чистяково вошли посёлки Красная Зорька, Краснодарское и Шевченко (все три до 20 июня того же года были в составе Ольховского поселкового совета Шахтёрского района).</td></tr>
+            <tr><td>21 января 1959 года</td><td>Ликвидированы районы города Чистяково (Красная Звезда, Южная группа, Станция Чистяково).</td></tr>
+            <tr><td>16 июля 1964 года </td><td>Город Чистяково переименован в город Торез в честь деятеля французской коммунистической партии Мориса Тореза, который в молодости был шахтёром.</td></tr>
+            <tr><td>С 1990-х годов</td><td>С 1990-х годов Торез — один из приходящих в упадок центров угольной промышленности на Украине. В Торезе закрыты почти все угольные обогатительные фабрики и шахты. Работает лишь несколько государственных и коммерческих (выкупленных частными лицами) шахт. Численность населения приближается к отметке в 60 тысяч человек, а средняя плотность жителей — 822 человека на квадратный километр.</td></tr>
+            <tr><td>17 июля 2014 года</td><td>В окрестностях города на участке местности между сёлами Рассыпное и Грабово упали обломки самолёта Boeing 777 авиакомпании Malaysia Airlines. Погибли все 298 человек, находившиеся на борту самолёта.</td></tr>
+            <tr><td>12 мая 2016 года</td><td>Верховная Рада Украины присвоила городу историческое название Чистяково в рамках кампании по декоммунизации на Украине. Переименование не было признано властями самопровозглашённой ДНР</td></tr>
         </table>
     </div>
-</main>
-<footer>
-    <p>
-        <small>Все права защищены Мной</small>
+<div class="footer"><footer>
+    <center> <p>
+        <small>Все права защищены ну это не точно</small>
     <address >
-        Не_скажу1@gmail.com
+    Почты нет и не будет <s>@gmail.com</s>
     </address>
-    </p>
+    </p></center>
 </footer>
-
+</div>
 </body>
 </html>
