--- a/culture.html
+++ b/culture.html
@@ -1,114 +1,44 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Сайт города Шахтерска</title>
-    <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
 <header>
-    <h1 class="link"><a href="">Shatersk.<span style="color: black;">D</span>
-        <span style="color: blue;">N</span>
-        <span style="color: red;">R</span>
-    </a></h1>
-    <img src="img/gerb160rus.jpg" height="152" width="160" alt = ''  />
+    <h1><a href="index.html"><span style="color: red;">Torez.com</span></a></h1>
+    <img src="photo/9.jpg" alt="Not found" height="150" width="150"/>
 </header>
 <nav>
-    <ul class="menu-main">
+    <ul class="menu">
         <li><a href="index.html">Главная</a></li>
         <li><a href="history.html">История </a></li>
         <li><a href="infrastruct.html">Инфраструктура </a></li>
-        <li><a href="culture.html">Исскуство и культура </a></li>
+        <li><a href="culture.html">Искуcство и культура</a></li>
         <li><a href="FAQ.html">Обратная связь</a></li>
     </ul>
 </nav>
-<main>
-    <h1> Дом культуры в Шахтеске</h1>
-    <img src="https://photos.wikimapia.org/p/00/01/45/06/48_big.jpg" class="foto-history" alt="Not found">
-    <h3 class="first-news-header">Экскурсия в библиотеку «Дом книг»</h3>
-    <img src="http://www.shahtersk.org/_nw/201/s45736488.jpg" class="leftright" alt="Not found">
-    <div class="verse"> Есть страна чудесная на свете,
-        Её библиотекою зовут.
-        Сюда приходят взрослые и дети,
-        Потому что книги здесь живут.</div>
-    <p>Центральная городская библиотека Муниципального учреждения культуры
-        «Централизованная библиотечная система» пригласила на экскурсию детей
-        логопедической группы МДОУ «Шахтерский ясли-сад №8». Встреча проходила
-        в рамках проекта социального партнерства библиотеки с дошкольными и школьными
-        образовательными учреждениями г. Шахтерска «Вместе с книгой мы растем».
-        Главная цель проекта – приобщение дошкольников к чтению и регулярному посещению
-        библиотеки.</p>
-        <p>Для ребят провели беседу-экскурсию: они побывали в удвительном городе,
-        где вместо улиц — ряды книжных стеллажей, вместо этажей — книжные полки,
-        дома — это тома книг. А у каждого дома своё название. Дети познакомились с
-        жильцами города — литературными героями, узнали, что такое абонемент и читальный зал,
-        полистали книги и журналы для их возраста. Вниманию малышей предложили видеоролик про
-        библиотеку, а затем вместе играли, читали стихи, отвечали на вопросы викторины,
-        угадывали сказочных персонажей. Очень понравился ребятам рассказ о том, как нужно
-        вести себя в библиотеке и мультфильм «Гришкины книжки».Малыши с интересом
-        рассматривали книги на выставке «Читаем книгу».</p>
-    <img src="http://www.shahtersk.org/_nw/201/s50412326.jpg"  alt="Not found" >
-    <img src="http://www.shahtersk.org/_nw/201/s94330008.jpg"  alt="Not found" >
-    <hr>
-    <h3 class="first-news-header">В объективе семья</h3>
-    <img src="http://www.shahtersk.org/_nw/201/s57045669.jpg" alt="Not found" class="leftright">
-    <p>
-        Важным направлением деятельности библиотек является организация работы по пропаганде здорового образа жизни у
-        подрастающего поколения. Библиотекари ставят перед собой задачи, направленные на расширение информационного
-        кругозора детей, подростков и молодёжи, а также системную профилактику вредных привычек.
-    </p>
-    <p>
-        В соответствии с планом мероприятий Управления культуры, молодежи, спорта и туризма
-        администрации города Шахтерска, направленных на профилактику идеологии экстремистской
-        деятельности, в библиотеках Муниципального учреждения культуры «Централизованная библиотечная система»
-        стартовал месячник по профилактике вредных привычек и ассоциативного поведения «Забавы вредные – совсем не полезные».
-        Работники библиотек проведут для читателей беседы, лекции, открытые диалоги, тематические программы,
-        театрализованные представления, демонстрации видеороликов, слайд-презентации и прочее.
-    </p>
-    <p>
-        Здоровый образ жизни сегодня – это требование времени.
-        Быть здоровым – модно и престижно. Современный подход в решении данной проблемы
-        говорит о том, что наряду с активным просвещением в вопросах различных видов
-        зависимостей, именно пропаганда здорового образа жизни является одной из важных форм
-        обучение безопасному для здоровья поведению. Важно стимулировать интерес молодежи к
-        здоровому образу жизни: демонстрировать подрастающему поколению как можно больше
-        позитивных примеров, чтобы у молодых людей была возможность выбора не между здоровым
-        или нездоровым образом жизни, а из большого количества разнообразных вариантов
-        отдать предпочтение именно здоровому и созидающему поведению.
-    </p>
-    <hr>
-    <h3 class="first-news-header">Освобождение Донбасса: цена Победы</h3>
-    <img src="http://www.shahtersk.org/_nw/199/s38876179.jpg" alt="Not found" class="leftright">
-    <p>В рамках цикла мероприятий ко Дню освобождения Донбасса «Не померкнет летопись побед»
-        в библиотеке-филиале №2 Муниципального учреждения культуры
-        «Централизованная библиотечная система» при участии учащихся 9 класса и
-        преподавателей Муниципального общеобразовательного учреждения
-        «Шахтерская средняя школа №22» состоялся час исторической хроники
-        «Освобождение Донбасса: цена Победы».</p>
-    <p>
-        Школьники посмотрели документальный фильм, посвященный военной операции по
-        освобождению Донбасса в 1943 году. Август и сентябрь 1943 года навсегда останутся
-        в памяти благодарных поколений примером массового героизма. В рядах защитников
-        Донбасса мужественно сражались представители всех братских народов нашей страны.
-        Ребята посмотрели видеопрезентации о подвигах Героев Советского Союза Ежкова В.Ф.,
-        Литвяк Л.В., Покрышкина А.И. Ребятам рассказали о защитниках города
-        Шахтерска – Баранове Н.И., Голубеве А.П., Голосном И.А. и провели обзор литературы,
-        представленной на книжной выставке.
-    </p>
-    <p>Библиотекарь подвела итог: «Война длилась долгих 4 года и каждый день ее был
-        поистине испытанием людей на стойкость, на терпение, на героизм. Нужно помнить о
-        подвигах героев, чтобы это не повторилось никогда».</p>
-    <hr>
+<body>
+<div class="first-news-header"><p><h2>Дом Культуры </h2></p></div>
+<img src="photo/13.jpg" alt="Not found" height="600" width="1000">
+<h3 class="first-news-header">Литературно - музыкальный вернисаж «Обыкновенный волшебник - М.С.Пляцковский»</h3>
 
-
-</main>
-<footer>
-    <p>
-        <small>Все права защищены Мной</small>
-    <address >
-        Не_скажу1@gmail.com
-    </address>
-    </p>
+       <center><img src="photo/14.jpg" alt="Not found"  height="575" width="800"/></center>
+    <dir class="text" ><p>"Сразу в сердце радости прибавится, Лишь увижу юности края, Краснодон, Макеевка, Дебальцево- Родина шахтерская моя". М.Пляцковский 20 сентября центральная городская детская библиотека пригласила учащихся 2-А класса лицея «Спектр» на литературно - музыкальный вернисаж, чтобы поближе познакомить их с творчеством нашего земляка - поэта-песенника, драматурга Михаила Спартаковича Пляцковского, имя которого горит яркой звездочкой в плеяде советских поэтов - песенников. </p></dir>
+<h3 class="first-news-header">ПРОЦВЕТАЙ, ЖИВИ И ПОЙ – ТОРЕЗ РОДНОЙ</h3>
+        <center><img src="photo/15.jpg" alt="Not found" height="575" width="800"/></center>
+        <dir class="text" ><p>В пятницу, 13 сентября 2019 года, на центральной городской площади состоялось ярмарочное гуляние «Процветай, живи и пой – Торез родной!». На мероприятии жители города могли приобрести товары местных производителей - бытовую химию, трикотажные изделия, сельскохозяйственную продукцию, мёд и продукцию пчеловодства, мясную и рыбную продукцию, яблоки, бахчевые. Также в рамках ярмарочного гуляния Торезский городской центр занятости провёл ярмарку вакансий, на которой присутствовали представители 15 предприятий различных сфер деятельности, были предложены более 500 вакансий как на постоянные рабочие места, таки и на работы временного характера. Все желающие смогли пройти экспресс-тестирование по определению своих личностных качеств, способствующих профессиональной самореализации. </p></dir>
+<div class="footer"><footer>
+    <center> <p>
+        <small>Все права защищены ну это не точно</small>
+        <address >
+            Почты нет и не будет <s>@gmail.com</s>
+        </address>
+        </p></center>
 </footer>
+</div>
 </body>
 </html>
